# mslookup

./: .gitignore  DADOS_ABERTOS_MEDICAMENTOS.parquet  DADOS_ABERTOS_MEDICAMENTOS.xlsx  LICENSE  README.md  TA_PRECO_MEDICAMENTO_GOV.parquet  access_anvisa_domain.py  checkpoint_manager.py  config.py  data_processor.py  data_reference.xlsx  input.py  json_manager.py  laboratories.json  logger_config.py  main.py  main.spec  patterns.json  pdf_db.json  pdf_manager.py  prepositions.json  pyproject.toml  rdcs.txt  relatorio_proc_dados.xlsx  relatorio_proc_dados_modificada.xlsx  relatorio_registros.xlsx  relatorio_registros_errados.xlsx  report_generator.py  report_records.xlsx  requirements.txt  search_and_print.py  search_in_open_data_anvisa.py  search_in_smerp.py  test.py  todo.txt  utils.py
Services/: candidate_data_service.py  data_processor_service.py  input_processor_service.py  pdf_processing_service.py
catalogo/: relatorio_catalogo.xlsx  search_and_delete.py  search_and_save.py  search_and_update.py
checkpoints/: candidate_service_checkpoint.pkl  candidate_service_identifier.txt  data_processor_checkpoint.pkl  data_processor_identifier.txt  input_processor_checkpoint.pkl  input_processor_identifier.txt
data_for_testing/: Controle_Operacao_000000_Cidade.xlsm  Controle_Operacao_PE_042024_Frutal.xlsm  Controle_Operacao_PE_090092024_Araxa.xlsm  Controle_Operacao_PE_112024_Campina-Verde.xlsm  Itens_Errados.xlsx  test_full_256.xlsm  test_quick_4.xlsm
mslookup/: access_anvisa_domain.py  checkpoint_manager.py  config.py  json_manager.py  logger_config.py  main.py  (+3 more)
(+97 files in other folders)
