[tool.poetry]
name = "mslookup.app"
version = "0.1.0"
description = ""
authors = ["Murilo Seidenstucker <murilocampos.004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
unidecode = "^1.3.8"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
