[tool.poetry]
name = "mslookup"
version = "0.1.0"
description = ""
authors = ["Murilo Seidenstucker <murilocampos.004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
selenium = "^4.25.0"
unidecode = "^1.3.8"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pygubu-designer = "^0.39.3"
pyinstaller = "^6.10.0"
ttkthemes = "^3.2.2"

[tool.poetry.scripts]
mslookup_start = "mslookup.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
